# 3D-Graphics

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  premake5.lua
App/: Makefile  main.cpp  premake5.lua
App/src/: defines.hpp
App/src/core/: Application.cpp  Application.hpp
App/src/mesh/: Mesh.cpp  Mesh.hpp
App/src/platform/: Makefile  Window.cpp  Window.hpp  premake5.lua
App/src/render/: Camera.cpp  Camera.hpp  Render.cpp  Render.hpp
Meshes/: Cube_faces.txt  Cube_vertices.txt
include/App/: App.h
include/Camera/: Camera.h
include/Entity/: Entity.h
include/Files/: Files.h
include/Math/: Vector.h  sse2neon.h
include/Memory/: Memory.h
include/Mesh/: Mesh.h
include/Renderer/: Renderer.h
include/Window/: Window.h
src/: App.c  Camera.c  Entity.c  Files.c  Memory.c  Mesh.c  Renderer.c  Vector.c  Window.c  main.c
